// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an active slide 1`] = `
<div
  className="phillips-slide active"
>
  <a
    href="/auctions/auction/NY010317"
    onClick={[Function]}
  >
    <div
      className="slide-image"
    >
      <div
        className="image-container"
        style={
          Object {
            "backgroundImage": "url(https://8675fa3b12fbaae97df1-49af760ec3cce3b92480c70a3569b570.ssl.cf2.rackcdn.com/HomePage/slide-128.jpg)",
            "backgroundPosition": "0% 0%",
            "backgroundSize": "cover",
          }
        }
      />
    </div>
  </a>
</div>
`;

exports[`should render an inactive slide 1`] = `
<div
  className="phillips-slide"
>
  <a
    href="/auctions/auction/NY010317"
    onClick={[Function]}
  >
    <div
      className="slide-image"
    >
      <div
        className="image-container"
        style={
          Object {
            "backgroundImage": "url(https://8675fa3b12fbaae97df1-49af760ec3cce3b92480c70a3569b570.ssl.cf2.rackcdn.com/HomePage/slide-128.jpg)",
            "backgroundPosition": "0% 0%",
            "backgroundSize": "cover",
          }
        }
      />
    </div>
  </a>
</div>
`;
